# routers/images_router.go
@@ -1,13 +1,17 @@
 package routers
 
-import "gvb_server/api"
+import (
+	"gvb_server/api"
+	"gvb_server/middleware"
+)
 
 func (router RouterGroup) ImagesRouter() {
 	app := api.ApiGroupApp.ImagesApi
 	router.GET("images", app.ImageListView)
 	router.GET("image_names", app.ImageNameListView)
-	router.POST("images", app.ImageUploadView)
-	router.DELETE("images", app.ImageRemoveView)
-	router.PUT("images", app.ImageUpdateView)
+	router.POST("images", middleware.JwtAuth(), app.ImageUploadView)
+	router.POST("image", middleware.JwtAuth(), app.ImageUploadDataView)
+	router.DELETE("images", middleware.JwtAdmin(), app.ImageRemoveView)
+	router.PUT("images", middleware.JwtAdmin(), app.ImageUpdateView)
 
 }
